docs/docusaurus/src/components/WasThisHelpful/styles.module.scss
@import '../../css/sass_variables.scss';

/* CSS for the Feedback Card */

.feedbackDivider {
    border-top: 1px solid var(--gray-400);
    margin-top: 3rem;
    margin-bottom: 3em;
}

.feedbackCard {
    background-color: var(--gray-100);
    border: 1px solid var(--gray-200);
    border-radius: 6px;
    box-shadow: 0 3px 6px -1px var(--gray-300);

    display: flex;
    flex-direction: row;
    gap: 1.5rem;
    margin: auto;
    padding: 0.75rem;
    width: 100%;
    max-width: 30rem;
    justify-content: center;
    align-items: center;
}

.feedbackCardTitle {
    font-size: var(--p-font-size);
    font-weight: var(--ifm-font-weight-semibold);
    margin: 0;
}

.feedbackCardActions{
    display: flex;
    gap: 0.5rem;
}

.feedbackButton {
    border-color: var(--ifm-color-primary);
    border-radius: 50rem;
    font-size: var(--p-md-font-size);
    font-weight: var(--ifm-font-weight-semibold);
    min-width: 4.5rem;
    padding: 0.25rem;
    text-align: center;

    &:enabled {
        background: none;
        border: 1px solid var(--ifm-color-primary);
        color: var(--ifm-color-primary);
        cursor: pointer;

        &:hover {
            background: var(--orange-100);
        }
    }

    &:disabled {
        background: var(--gray-200);
        border: 1px solid transparent;
        color: var(--gray-500);
    }
}

/* CSS for the Feedback Modal */

.overlay {
    background-color: rgba(0, 0, 0, 0.3);
    height: 100vh;
    left: 0;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: calc(var(--ifm-z-index-fixed) + 1);
}

.modal {
    background: var(--white);
    border: 3px solid #272763;
    border-radius: 10px;
    box-shadow: 0 3px 6px -1px rgb(0,0,0,0.1);
    color: var(--white);
    display: flex;
    flex-direction: column;
    left: 50%;
    position: fixed;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    padding: 0;
    margin: 0;
    max-width: 700px;
    max-height: 80vh;
    z-index: calc(var(--ifm-z-index-fixed) + 2);
}

.modalHeader {
    align-items: center;
    background-color: #272763;
    color: white;
    display: flex;
    margin: 0;
    padding: 10px;
    overflow: hidden;
}

.modalHeaderTitle {
    flex: 1;
    text-align: center;
}

.modalHeaderCloseButton {
    align-self: flex-end;
    cursor: pointer;
    height: 8px;
    margin: auto;
}

.modalContent {
    padding: 1rem 2rem;
    color: var(--ifm-font-color-base);
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 0.75rem;
    overflow-y: auto;
}

.textInputs{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 2rem;
}

.modalTextContainer {
    display: flex;
    flex-direction: column;
    position: relative;
    flex: 1;
}

.modalTextLabel {
    font: var(--ifm-font-size-base) var(--ifm-font-family-base);
    font-size: 0.75rem;
    font-weight: bold;
    color: var(--gray-700);
    margin-bottom: 0.25rem;
}

.radioOption {
    font: var(--ifm-font-size-base) var(--ifm-font-family-base);
    font-size: 1.125rem;
    input {
        margin-right: 0.5rem;
    }
}

.modalTextInput {
    border: 1px solid var(--gray-700);
    border-radius: 20px;
    font: var(--ifm-font-size-base) var(--ifm-font-family-base);
    height: 2.25rem;
    padding: 0.75rem;
    outline: none;
    color: var(--ifm-font-color-base);
}

.modalTextareaInput {
    min-height: 6rem;
    min-width: 38.5rem;
    max-width: 38.5rem;
}

.modalTextInput:active, .modalTextInput:focus, .modalTextInput:hover {
    border: 1px solid var(--ifm-color-primary);
}

.submitButton {
    border-radius: 20px;
    font-weight: bold;
    color: white;
    border: none;
    transition: background-color 0.3s ease;
    padding: 0.75rem;
    margin-bottom: 0.5rem;

    &:enabled {
        background-color: var(--ifm-color-primary);
        cursor: pointer;

        &:hover {
            background-color: #DE550A;
        }
    }

    &:disabled {
        background-color: var(--gray-400);
    }

    .errorMessage + & {
        margin-top: 0;
    }
}

.errorMessage {
    color: var(--ifm-color-danger-dark);
    font-size: var(--p-md-font-size);
    margin: 0;
}

@media (max-width: $mobile-sm-breakpoint) {
    .modal {
        height: 100%;
        max-height: unset;
    }
}

[data-theme='dark'] {
    .feedbackCard {
        background-color: #404041;
        border-color: #404041;
        box-shadow: 0 3px 6px #00000029;
    }

    .feedbackCardTitle {
        color: var(--ifm-font-color-base);
    }

    .feedbackButton:enabled:hover {
        background-color: var(--dark-orange-dark-theme);
    }

    .feedbackDivider {
        border-color: var(--light-gray-dark-theme);
    }

    .modal {
        background-color: #222222;
    }

    .modalTextInput {
        border-color: #F4F4F7;
    }

    .modalTextLabel {
        color: var(--ifm-font-color-base);
    }
}

